CanasiSite/canasi-html/main.css
* {
    font-family: sans-serif;
}

main {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    font-size: large;
    color: #262626;
    overflow: hidden;
}
.navbar-center {
    display: flex;
    justify-content: center;
    margin: 0 auto;
}

.large-header {
    font-size: 6rem;
}

.largeless-header {
    font-size: 4rem;
}

.form-container {
    display: flex;
    justify-content: center;
    align-items: center;
}

.custom-form {
    width: 200px;
    align-items: center;
    justify-content: center;
}

.real-footer {
    position: fixed;
    bottom: 0;
    left: 0;
    width: 100%;
    background-color: #767676;
    padding: 10px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    color: #262626;
    font-size: medium;

}

#footer-name {
    margin-left: auto;
}

#github-link {
    color: black;
}


.username {
    text-align: center;
    justify-content: center;
    font-size: larger;
}

.stats {
    text-align: center;
    justify-content: center;
}

#wins {
    color: green;
}

#losses {
    color: red;
}

.howTo-container {
    margin-left: 15%;
    margin-right: 15%;
}


#move-prompt {
    padding-bottom: 60px;
}
#opponents-move {
    padding-bottom: 30px;
}
/* board css */
.board {
    display: grid;
    grid-template-columns: repeat(7, 75px);
    grid-template-rows: repeat(7, 75px);
    align-items: center;
    justify-content: center;
}

.board-cell {
    width: 75px;
    height: 75px;
}

.board-cell:nth-child(even) {
    background-color: green;
}

.board-cell:nth-child(odd) {
    background-color: black;
}


@media (max-width: 768px) {

    .board {
        grid-template-columns: repeat(7, 30px); /* Adjust size for smaller screens */
        grid-template-rows: repeat(7, 30px);
    }
    .board-cell {
        width: 30px;
        height: 30px;
    }

}









#SilunaiIMG,
#scrivtreIMG {
    width: 350px;
    height: 350px;
    justify-content: center;
    align-items: center;
}
.picture {
    position: relative;
    width: 50%;
}

.image {
    width: 100%;
    height: auto;
}

.overlay {
    transition: .5s ease;
    opacity: 0;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    text-align: center;
}

.picture:hover .overlay {
    opacity: .9;
}

.hidden-text {
    background-color: #262626;
    color: #767676;
    font-size: 2em;

}

.howToPlay {
    margin-bottom: 75px;
}

